# bank_statement_extractor

./: .gitignore  README.md  find_pages.py  pyproject.toml  validate_balances.py
src/bank_statement_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/extractor/: debug_tables.py  detect.py  models.py  normalize.py  parse.py  pipeline.py  segment.py
src/extractor/banks/: wells_fargo.py  wells_fargo_layout.py
tests/: test_wells_fargo_basic.py
